# HUhacathon2020

./: .env  Cargo.toml  README.md
migrations/2018-07-05-163612_create_tasks_table/: up.sql
src/: api.rs  db.rs  main.rs  model.rs  schema.rs
static/css/: skeleton.css
templates/: index.html.tera
